# llm-apps

./: .gitignore  README.MD  pyproject.toml
.devcontainer/: devcontainer.json
pages/: simple_chat.py
