[tool.poetry]
name = "llm-apps"
version = "0.1.0"
description = ""
authors = ["Yuto Urashima <yuto.urashima24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
openai = "0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
